change class name

--- a/assets/js/pages/CreateActivity/style.css
+++ b/assets/js/pages/CreateActivity/style.css
@@ -10,18 +10,18 @@
   margin-bottom: 10px;
 }
 
-.label {
+.label-activity {
   width: 30%;
   text-align: left;
   margin-right: 10px;
 }
 
-.input {
+.input-activity {
   flex: 1;
 }
 
 
-.textarea {
+.textarea-activity {
   height: 100px; 
   resize: vertical;
 }
